force-app/main/default/objects/Client_Service_Delivery__c/Client_Service_Delivery__c.object-meta.xml
<CustomObject>
    <label>Client Service Delivery</label>
    <nameField>
        <label>Client Service Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Service Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>