force-app/main/default/objects/Client_Service_Delivery__c/fields/BRANCH_Vendor__c.field-meta.xml
<CustomField>
    <fullName>BRANCH_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BRANCH / Vendor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Service Deliveries</relationshipLabel>
    <relationshipName>Client_Service_Deliverys</relationshipName>
    <type>Lookup</type>
</CustomField>