force-app/main/default/objects/Client_Service_Delivery__c/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Service Deliveries</relationshipLabel>
    <relationshipName>Client_Service_Deliverys</relationshipName>
    <type>Lookup</type>
</CustomField>