force-app/main/default/objects/Client_Service_Delivery__c/fields/CSD__c.field-meta.xml
<CustomField>
    <fullName>CSD__c</fullName>
    <label>CSD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>