force-app/main/default/objects/Client_Service_Delivery__c/fields/Damage_Reason_if_any__c.field-meta.xml
<CustomField>
    <fullName>Damage_Reason_if_any__c</fullName>
    <label>Damage Reason(if any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>