force-app/main/default/objects/Client_Service_Delivery__c/fields/Destination_Branch_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Destination_Branch_Vendor__c</fullName>
    <label>Destination Branch Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>