force-app/main/default/objects/Client_Service_Delivery__c/fields/Destination_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Destination_Feedback__c</fullName>
    <label>Destination Feedback</label>
    <length>100</length>
    <type>Text</type>
</CustomField>