force-app/main/default/objects/Client_Service_Delivery__c/fields/Destination_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Destination_Supervisor__c</fullName>
    <label>Destination Supervisor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>