force-app/main/default/objects/Client_Service_Delivery__c/fields/Enquiry_No__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry No.</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Client Service Deliveries</relationshipLabel>
    <relationshipName>Client_Service_Deliverys</relationshipName>
    <type>Lookup</type>
</CustomField>