force-app/main/default/objects/Client_Service_Delivery__c/fields/Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Amount__c</fullName>
    <label>Insurance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>