force-app/main/default/objects/Client_Service_Delivery__c/fields/JCD__c.field-meta.xml
<CustomField>
    <fullName>JCD__c</fullName>
    <label>JCD</label>
    <type>Date</type>
</CustomField>