force-app/main/default/objects/Client_Service_Delivery__c/fields/JCED__c.field-meta.xml
<CustomField>
    <fullName>JCED__c</fullName>
    <label>JCED</label>
    <type>Date</type>
</CustomField>