force-app/main/default/objects/Client_Service_Delivery__c/fields/Job_Escalation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Job_Escalation_Remarks__c</fullName>
    <label>Job/ Escalation Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>