force-app/main/default/objects/Client_Service_Delivery__c/fields/Job_No__c.field-meta.xml
<CustomField>
    <fullName>Job_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job No.</label>
    <referenceTo>Job_Process__c</referenceTo>
    <relationshipLabel>Client Service Deliveries</relationshipLabel>
    <relationshipName>Client_Service_Deliverys</relationshipName>
    <type>Lookup</type>
</CustomField>