force-app/main/default/objects/Client_Service_Delivery__c/fields/KAM__c.field-meta.xml
<CustomField>
    <fullName>KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Service_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>