force-app/main/default/objects/Client_Service_Delivery__c/fields/Origin_Branch_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Origin_Branch_Vendor__c</fullName>
    <label>Origin Branch/Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>