force-app/main/default/objects/Client_Service_Delivery__c/fields/Origin_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Origin_Feedback__c</fullName>
    <label>Origin Feedback</label>
    <length>100</length>
    <type>Text</type>
</CustomField>