force-app/main/default/objects/Client_Service_Delivery__c/fields/Origin_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Origin_Supervisor__c</fullName>
    <label>Origin Supervisor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>