force-app/main/default/objects/Client_Service_Delivery__c/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <label>Packages</label>
    <length>50</length>
    <type>Text</type>
</CustomField>