force-app/main/default/objects/Client_Service_Delivery__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Client Service Deliveries</relationshipLabel>
    <relationshipName>Client_Service_Deliverys</relationshipName>
    <type>Lookup</type>
</CustomField>