force-app/main/default/objects/Client_Service_Delivery__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Service_Deliveries1</relationshipName>
    <type>Lookup</type>
</CustomField>