force-app/main/default/objects/Client_Service_Delivery__c/fields/Transit_Status__c.field-meta.xml
<CustomField>
    <fullName>Transit_Status__c</fullName>
    <label>Transit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Job Cancelled</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Upcoming Tomorrow packing</fullName>
            </value>
            <value>
                <fullName>Tomorrow Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>