force-app/main/default/objects/Client_Service_Delivery__c/fields/Warehousing_Branch__c.field-meta.xml
<CustomField>
    <fullName>Warehousing_Branch__c</fullName>
    <label>Warehousing Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>