force-app/main/default/objects/Client_Service_Delivery__c/validationRules/Approval_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Approval_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Approval_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>