force-app/main/default/objects/Client_Service_Delivery__c/validationRules/Invoice_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Invoice_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Invoice_Date__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>