force-app/main/default/objects/Client_Service_Delivery__c/validationRules/JCD.validationRule-meta.xml
<ValidationRule>
    <fullName>JCD</fullName>
    <active>true</active>
    <errorConditionFormula>JCD__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>JCD__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>