force-app/main/default/objects/Client_Service_Delivery__c/validationRules/JCED.validationRule-meta.xml
<ValidationRule>
    <fullName>JCED</fullName>
    <active>true</active>
    <errorConditionFormula>JCED__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>JCED__c</errorDisplayField>
    <errorMessage>Past Date Is Not Allowed</errorMessage>
</ValidationRule>