force-app/main/default/objects/Client_Service_Delivery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CSD__c</columns>
    <columns>Enquiry_No__c</columns>
    <columns>Corporate__c</columns>
    <columns>KAM__c</columns>
    <columns>Job_No__c</columns>
    <columns>BRANCH_Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>